# devkit.build-recipes

./: .gitignore  .gitmodules
build-recipes.hub/: build-recipes.hub.sln
build-recipes.prj/: build-recipes.prj.vcxproj  build-recipes.prj.vcxproj.filters  build-recipes.vcxproj.filters
build-recipes.prj/build-recipes/: build-recipes.vcxproj  build-recipes.vcxproj.filters
build-recipes.prj/build-recipes-cmake/: build-recipes-cmake.vcxproj  build-recipes-cmake.vcxproj.filters
build-recipes.tests/tests-build-recipes-cmake.devkit/: CMakeLists.txt  tests-build-recipes-cmake.devkit.vcxproj  tests-build-recipes-cmake.devkit.vcxproj.filters
build-recipes.tests/tests-build-recipes-cmake.devkit/tests-build-recipes-cmake/: CMakeLists.txt
build-recipes.tests/tests.build-recipes.executable/: tests.build-recipes.executable.vcxproj
build-recipes.tests/tests.build-recipes.library/: header.h  source.cpp  tests.build-recipes.library.vcxproj  tests.build-recipes.library.vcxproj.filters
build-recipes.tests/tests.build-recipes.native-unit-test/: stdafx.cpp  tests.build-recipes.native-unit-test.vcxproj  unittest1.cpp
build-recipes/build-recipes.prj/: build-recipes.vcxproj
